--- a/index.html
+++ b/index.html
@@ -19,7 +19,218 @@
     <title>Elias Ainsworth | Web Developer</title>
   </head>
   <body>
-    <h1>Portfolio Website</h1>
+    <header class="header vh-100 text-center position-relative">
+      <div
+        class="text-container position-relative d-flex flex-column justify-content-center align-items-center h-100"
+      >
+        <h5 class="text-primary fs-3 fw-bold text-uppercase">Hello, World</h5>
+        <h1 id="typing-text" class="display-1 fw-bold text-white">
+          
+        </h1>
+        <p class="roles text-white text-uppercase fs-4">
+          <span>Full Stack Web Developer |</span>
+          <span>Online Educator</span> </p>
+          <a href="#about" class="btn btn-outline-light btn-lg mt-3">
+            <div class="d-flex">
+              <div class="me-3">
+                <i class="fas fa-chevron-down"></i>
+              </div>
+              <div class="text-start">
+                <span>More About Me</span>
+              </div>
+            </div>
+          </a>
+
+          <div class="social d-flex gap-3 position-absolute">
+            <a href="#"><i class="fab fa-twitter fa-3x text-white"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-3x text-white"></i></a>
+            <a href="#"><i class="fab fa-linkedin fa-3x text-white"></i></a>
+            <a href="#"><i class="fab fa-facebook fa-3x text-white"></i></a>
+            <a href="#"><i class="fab fa-youtube fa-3x text-white"></i></a>
+            <a href="#"><i class="fab fa-github fa-3x text-white"></i></a>
+          </div>
+        </p>
+      </div>
+    </header>
+
+    <!-- About -->
+    <section id="about" class="about bg-light py-5">
+      <div class="container">
+        <div class="text-center">
+          <h4 class="text-uppercase fw-bold text-primary">About Me</h4>
+          <hr class="w-25 mx-auto" />
+          <h2 class="mb-4">Let me introduce myself.</h2>
+        </div>
+        <div class="about-content d-flex gap-5 align-items-center h-100">
+          <img src="https://randomuser.me/api/portraits/men/33.jpg" alt="Photo of Elias Ainsworth" class="about-img img-fluid rounded-circle">
+          <p class="lead">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita commodi consequuntur, omnis blanditiis ea beatae laboriosam, tempore eius, provident quia iste cum! Tempora blanditiis expedita dignissimos mollitia, ratione quos harum?
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Profile & Skills -->
+    <section class="profile my-6">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h3 class="text-uppercase fw-bold">Profile</h3>
+            <p>Here is some more info about myself to help you get to know me
+              better.</p>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item mb-3">
+                  <h5 class="text-transform">
+                    <i class="fas fa-user text-primary">
+                    </i> Full Name:
+                  </h5>
+                  <p>Elias Ainsworth</p>
+                </li>
+                <li class="list-group-item mb-3">
+                  <h5 class="text-transform">
+                    <i class="fas fa-calendar text-primary">
+                    </i> Birth Date:
+                  </h5>
+                  <p>August 17th</p>
+                </li>
+                <li class="list-group-item mb-3">
+                  <h5 class="text-transform">
+                    <i class="fas fa-building text-primary">
+                    </i> Current Position:
+                  </h5>
+                  <p>Full Stack Web Developer</p>
+                </li>
+                <li class="list-group-item mb-3">
+                  <h5 class="text-transform">
+                    <i class="fas fa-home text-primary">
+                    </i> Website:
+                  </h5>
+                  <p>elias.magus.com</p>
+                </li>
+                <li class="list-group-item mb-3">
+                  <h5 class="text-transform">
+                    <i class="fas fa-envelope text-primary">
+                    </i> Email:
+                  </h5>
+                  <p>elias@magus.com</p>
+                </li>
+              </ul>
+          </div>
+
+          <div class="col-md-6">
+            <h3 class="text-uppercase fw-bold">Skills</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate reprehenderit nesciunt totam cumque quas unde.</p>
+            <h5><i class="fas fa-check">  </i> HTML5</h5>
+            <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+            aria-valuemax="100">
+              <div class="progress-bar" style="width: 100%">100%</div>
+            </div>
+
+            <h5><i class="fas fa-check">  </i> CSS3</h5>
+            <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+            aria-valuemax="100">
+              <div class="progress-bar" style="width: 90%">90%</div>
+            </div>
+
+            <h5><i class="fas fa-check">  </i> JavaScript</h5>
+            <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+            aria-valuemax="100">
+              <div class="progress-bar" style="width: 90%">90%</div>
+            </div>
+
+            <h5><i class="fas fa-check">  </i> Bootstrap 5</h5>
+            <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+            aria-valuemax="100">
+              <div class="progress-bar" style="width: 100%">100%</div>
+            </div>
+
+            <h5><i class="fas fa-check">  </i> PHP</h5>
+            <div class="progress mb-4" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+            aria-valuemax="100">
+              <div class="progress-bar" style="width: 75%">75%</div>
+            </div>
+
+            <h5><i class="fas fa-check">  </i> Python</h5>
+            <div class="progress mb-4" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+            aria-valuemax="100">
+              <div class="progress-bar" style="width: 70%">70%</div>
+            </div>
+
+            <h5><i class="fas fa-check">  </i> UI/UX</h5>
+            <div class="progress mb-4" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+            aria-valuemax="100">
+              <div class="progress-bar" style="width: 70%">70%</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mt-5 text-center">
+          <div class="col-12">
+            <a href="#" class="btn btn-outline-dark btn-lg text-uppercase px-5 mx-3 my-2">Hire Me Now</a>
+            <a href="#" class="btn btn-dark btn-lg text-uppercase px-5 mx-3 my-2">Download CV</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Portfolio -->
+    <section class="portfolio py-5 bg-light">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h4 class="text-uppercase fw-bold text-primary">
+            Portfolio
+          </h4>
+          <hr class="w-25 mx-auto" />
+          <h2 class="mb-4">Check Out My Work</h2>
+          <p class="lead">Here is a small sample of my projects.</p>
+        </div>
+        <div class="row">
+            <div class="col-md-6 mb-4">
+              <div class="project shadow-lg rounded-5">
+                <a href="images/project1.jpg" data-lightbox="images"
+                data-title="Clipboard Landing Page">
+              <img src="images/project1.jpg" alt="" class="img-fluid rounded-3"></a>
+              </div>
+            </div>
+            <div class="col-md-6 mb-4">
+              <div class="project shadow-lg rounded-5">
+                <a href="images/project2.jpg" data-lightbox="images"
+                data-title="Loop Studios Website">
+              <img src="images/project2.jpg" alt="" class="img-fluid rounded-3"></a>
+              </div>
+            </div>
+            <div class="col-md-6 mb-4">
+              <div class="project shadow-lg rounded-5">
+                <a href="images/project3.jpg" data-lightbox="images"
+                data-title="Shortly Website">
+              <img src="images/project3.jpg" alt="" class="img-fluid rounded-3"></a>
+              </div>
+            </div>
+            <div class="col-md-6 mb-4">
+              <div class="project shadow-lg rounded-5">
+                <a href="images/project4.jpg" data-lightbox="images"
+                data-title="Fylo Website">
+              <img src="images/project4.jpg" alt="" class="img-fluid rounded-3"></a>
+              </div>
+            </div>
+            <div class="col-md-6 mb-4">
+              <div class="project shadow-lg rounded-5">
+                <a href="images/project5.jpg" data-lightbox="images"
+                data-title="Bookmark Website">
+              <img src="images/project5.jpg" alt="" class="img-fluid rounded-3"></a>
+              </div>
+            </div>
+            <div class="col-md-6 mb-4">
+              <div class="project shadow-lg rounded-5">
+                <a href="images/project6.jpg" data-lightbox="images"
+                data-title="Grid Layout">
+              <img src="images/project6.jpg" alt="" class="img-fluid rounded-3"></a>
+              </div>
+            </div>
+        </div>
+      </div>
+    </section>
+
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/lightbox-plus-jquery.min.js"></script>
