--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             </div>
 
             <!-- Form -->
-            <form name="contact" netlify>
+            <form name="contact">
               <div class="mb-5">
                 <input type="text" class="form-control bg-transparent border-top-0 border-start-0 border-end-0 rounded-0 border-muted text-white" placeholder="Name"
                 name="name">  
